--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: proteinStructureBoost
 Title: Generate Boosting Model for Structured Protein
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Shaoxun", "Liu", , "sl4970@columbia.edu", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
@@ -20,4 +20,8 @@ Imports:
   graphics,
   adabag,
   stats,
-  MLmetrics
+  MLmetrics,
+  lime,
+  ggplot2,
+  caret
+  
