--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(adaboostTrain)
 export(atom.color)
 export(atom.value)
 export(augVote)
+export(caretLime)
+export(caretTrain)
 export(coord)
 export(download.pdb)
 export(featureMatrix)
@@ -12,5 +14,8 @@ export(form.grid)
 export(grid3D)
 export(lbp2Feature)
 export(lbp3d)
+export(lbpLIME)
+export(plotLIME)
+export(predict)
 export(rotatePDB)
 export(trainTest)
